# more.browser_session

./: .gitignore  AUTHORS  LICENSE  Pipfile  README.md  devenv.nix  pyproject.toml  setup.cfg  setup.py  shell.nix
more/browser_session/: VERSION  __init__.py  app.py  sessions.py
more/browsersession/: app.py  sessions.py
nix/: sources.json
src/more/browser_session/: app.py  sessions.py
tests/: conftest.py  test_app.py  test_sessions.py
