[tool.poetry]
name = "more.browser_session"
version = "23.2.0"
description = "Session support for Morepath applications"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/edemocracy/more.browser_session"
packages = [{include = "more", from = "src"}]
keywords = ["morepath", "session", "web", "http"]

[tool.poetry.dependencies]
python = "^3.10"
itsdangerous = "^2.1.2"
morepath = "^0.19"
Werkzeug = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
WebTest = "^3.0.0"

[tool.pytest.ini_options]
addopts = """\
  --show-capture=no \
  -ra \
  --tb=short \
  --strict-markers \
"""
filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
