[metadata]
name = more.browser_session
version = file: more/browser_session/VERSION
description = HTTP Session support for Morepath applications
author = Tobias dpausp and Pyramid contributors
author_email = dpausp@posteo.de
license = BSD
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

keywords = morepath,session,web,http

[options]
packages = find:
python_requires = ~=3.6
include_package_data = True
install_requires =
    morepath >= 0.18
    itsdangerous >= 0.21
    werkzeug >= 0.9