[metadata]
name = more.browser_session
description = Session support for Morepath applications
author = Tobias dpausp and Pyramid contributors
author_email = dpausp@posteo.de
url = https://github.com/dpausp/more.browser_session
license = BSD
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

keywords = morepath,session,web,http
