[metadata]
name = more.browser_session
description = Session support for Morepath applications
author = Tobias dpausp and Flask contributors
author_email = dpausp@posteo.de
url = https://github.com/dpausp/more.browser_session
license = BSD
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

keywords = morepath,session,web,http

[options]
packages = more.browser_session
package_dir =
    = src
python_requires = >=3.8

setup_requires =
    setuptools_scm

install_requires =
    itsdangerous >= 0.21
    morepath >= 0.18
    werkzeug >= 0.9


[options.extras_require]
tests =
    pytest
    webtest
